--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Telehgram</string>
+
+
+    <!-- LOGIN -->
+
+    <string name="iniciar_sesion">Iniciar Sesión</string>
+    <string name="email">Email</string>
+    <string name="password">Contraseña</string>
+    <string name="login">OK</string>
 </resources>
