chat y mensaje layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="email">Email</string>
     <string name="password">Contraseña</string>
     <string name="login">OK</string>
+
+    <!-- CHAT -->
+    <string name="enviar">Enviar</string>
+
 </resources>
