--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Telehgram</string>
 
-
     <!-- LOGIN -->
 
     <string name="iniciar_sesion">Iniciar Sesión</string>
@@ -11,5 +10,8 @@
 
     <!-- CHAT -->
     <string name="enviar">Enviar</string>
+
+    <!-- MENU -->
+    <string name="cerrar_sesion">Cerrar Sesión</string>
 
 </resources>
